--- a/index.html
+++ b/index.html
@@ -732,6 +732,11 @@
                           <p>Дата подписания: 07.11.2025</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
+                <div class="card" onclick="location.href='card135.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 12.11.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+            </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
@@ -743,6 +748,7 @@
 
 </body>
 </html>
+
 
 
 
