--- a/index.html
+++ b/index.html
@@ -716,6 +716,12 @@
                           <p>Дата подписания: 24.10.2025</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
+
+                <div class="card" onclick="location.href='card137.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 29.10.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+            </div>
                 <div class="card" onclick="location.href='card133.html'">
                           <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
                           <p>Дата подписания: 06.11.2025</p>
@@ -748,6 +754,7 @@
 
 </body>
 </html>
+
 
 
 
