--- a/index.html
+++ b/index.html
@@ -753,6 +753,12 @@
                           <p>Дата подписания: 18.11.2025</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
+    
+            <div class="card" onclick="location.href='card139.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 26.11.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+            </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
@@ -764,6 +770,7 @@
 
 </body>
 </html>
+
 
 
 
