--- a/index.html
+++ b/index.html
@@ -764,6 +764,12 @@
                           <p>Дата подписания: 05.12.2025</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
+
+                    <div class="card" onclick="location.href='card144.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 09.12.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+            </div>
     
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
@@ -776,6 +782,7 @@
 
 </body>
 </html>
+
 
 
 
