--- a/index.html
+++ b/index.html
@@ -770,6 +770,11 @@
                           <p>Дата подписания: 09.12.2025</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
+                    <div class="card" onclick="location.href='card145.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 11.12.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+            </div>
     
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
@@ -782,6 +787,7 @@
 
 </body>
 </html>
+
 
 
 
