--- a/index.html
+++ b/index.html
@@ -775,6 +775,11 @@
                           <p>Дата подписания: 11.12.2025</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
             </div>
+                    <div class="card" onclick="location.href='card146.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 21.12.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+                    </div>
     
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
@@ -787,6 +792,7 @@
 
 </body>
 </html>
+
 
 
 
