--- a/index.html
+++ b/index.html
@@ -780,6 +780,16 @@
                           <p>Дата подписания: 21.12.2025</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
                     </div>
+                        <div class="card" onclick="location.href='card147.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 15.12.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+                    </div>
+                        <div class="card" onclick="location.href='card148.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 17.12.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+                    </div>
     
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
@@ -792,6 +802,7 @@
 
 </body>
 </html>
+
 
 
 
