--- a/index.html
+++ b/index.html
@@ -790,7 +790,22 @@
                           <p>Дата подписания: 17.12.2025</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
                     </div>
-    
+                            <div class="card" onclick="location.href='card149.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 28.10.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+                    </div>
+                            <div class="card" onclick="location.href='card150.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 30.10.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+                            </div>
+
+                            <div class="card" onclick="location.href='card151.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 03.12.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+                            </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
@@ -802,6 +817,7 @@
 
 </body>
 </html>
+
 
 
 
