--- a/index.html
+++ b/index.html
@@ -806,6 +806,12 @@
                           <p>Дата подписания: 03.12.2025</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
                             </div>
+    
+                            <div class="card" onclick="location.href='card152.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 18.12.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+                            </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
@@ -817,6 +823,7 @@
 
 </body>
 </html>
+
 
 
 
