--- a/index.html
+++ b/index.html
@@ -812,6 +812,11 @@
                           <p>Дата подписания: 18.12.2025</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
                             </div>
+                            <div class="card" onclick="location.href='card153.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 14.11.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+                            </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
@@ -823,6 +828,7 @@
 
 </body>
 </html>
+
 
 
 
