--- a/index.html
+++ b/index.html
@@ -822,6 +822,11 @@
                           <p>Дата подписания: 22.12.2025</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
                             </div>
+                            <div class="card" onclick="location.href='card155.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 23.12.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+                            </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
@@ -833,6 +838,7 @@
 
 </body>
 </html>
+
 
 
 
