--- a/index.html
+++ b/index.html
@@ -857,6 +857,11 @@
                           <p>Дата подписания: 02.12.2025</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
                             </div>
+                                <div class="card" onclick="location.href='card161.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 25.12.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+                            </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
@@ -868,6 +873,7 @@
 
 </body>
 </html>
+
 
 
 
