--- a/index.html
+++ b/index.html
@@ -917,6 +917,11 @@
                           <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
                           <p>Дата подписания: 31.12.2025</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+                           </div>
+                                <div class="card" onclick="location.href='card173.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 02.12.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
@@ -928,6 +933,7 @@
 
 </body>
 </html>
+
 
 
 
