--- a/index.html
+++ b/index.html
@@ -922,6 +922,13 @@
                           <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
                           <p>Дата подписания: 02.12.2025</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+                                </div>
+                                    <div class="card" onclick="location.href='card174.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 20.11.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+                                </div>
+    
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
@@ -933,6 +940,7 @@
 
 </body>
 </html>
+
 
 
 
