--- a/index.html
+++ b/index.html
@@ -928,7 +928,12 @@
                           <p>Дата подписания: 20.11.2025</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
                                 </div>
-    
+
+                                        <div class="card" onclick="location.href='card175.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 27.11.2025</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+                                </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
@@ -940,6 +945,7 @@
 
 </body>
 </html>
+
 
 
 
