--- a/index.html
+++ b/index.html
@@ -940,6 +940,12 @@
                           <p>Дата подписания: 13.01.2026</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
                                 </div>
+
+                                                <div class="card" onclick="location.href='card177.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 05.02.2026</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+                                </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
@@ -951,6 +957,7 @@
 
 </body>
 </html>
+
 
 
 
