--- a/index.html
+++ b/index.html
@@ -947,11 +947,18 @@
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
                                 </div>
 
-                                                    <div class="card" onclick="location.href='card177.html'">
+                                                    <div class="card" onclick="location.href='card178.html'">
                           <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
                           <p>Дата подписания: 05.02.2026</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
                                 </div>
+
+                                               <div class="card" onclick="location.href='card179.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 15.01.2026</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+                                </div>
+    
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
@@ -963,6 +970,7 @@
 
 </body>
 </html>
+
 
 
 
