--- a/index.html
+++ b/index.html
@@ -958,6 +958,11 @@
                           <p>Дата подписания: 15.01.2026</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
                                 </div>             
+                                                           <div class="card" onclick="location.href='card181.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 09.02.2026</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+                                </div> 
     
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
@@ -970,6 +975,7 @@
 
 </body>
 </html>
+
 
 
 
