--- a/index.html
+++ b/index.html
@@ -963,6 +963,12 @@
                           <p>Дата подписания: 09.02.2026</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
                                 </div> 
+
+                                                               <div class="card" onclick="location.href='card182.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 10.02.2026</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+                                </div> 
     
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
@@ -975,6 +981,7 @@
 
 </body>
 </html>
+
 
 
 
