--- a/index.html
+++ b/index.html
@@ -969,6 +969,12 @@
                           <p>Дата подписания: 10.02.2026</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
                                 </div> 
+
+                                                                   <div class="card" onclick="location.href='card183.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 12.02.2026</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+                                </div> 
     
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
@@ -981,6 +987,7 @@
 
 </body>
 </html>
+
 
 
 
