--- a/index.html
+++ b/index.html
@@ -975,6 +975,11 @@
                           <p>Дата подписания: 12.02.2026</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
                                 </div> 
+                                                                       <div class="card" onclick="location.href='card184.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 13.02.2026</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+                                </div> 
     
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
@@ -987,6 +992,7 @@
 
 </body>
 </html>
+
 
 
 
