--- a/index.html
+++ b/index.html
@@ -984,7 +984,18 @@
                           <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
                           <p>Дата подписания: 17.02.2026</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
-                                </div> 
+                                </div>
+
+                                                                               <div class="card" onclick="location.href='card186.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 19.02.2026</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+                                </div>
+                                                                               <div class="card" onclick="location.href='card187.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 20.02.2026</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+                                </div>
     
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
@@ -997,6 +1008,7 @@
 
 </body>
 </html>
+
 
 
 
