--- a/index.html
+++ b/index.html
@@ -996,6 +996,12 @@
                           <p>Дата подписания: 20.02.2026</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
                                 </div>
+
+                                                                                   <div class="card" onclick="location.href='card188.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 24.02.2026</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+                                </div>
     
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
@@ -1008,6 +1014,7 @@
 
 </body>
 </html>
+
 
 
 
