--- a/index.html
+++ b/index.html
@@ -1008,6 +1008,12 @@
                           <p>Дата подписания: 25.02.2026</p>
                           <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
                                 </div>
+
+                                                                                           <div class="card" onclick="location.href='card190.html'">
+                          <h2>ТОО “Научно-производственный центр агроинженерии”</h2>
+                          <p>Дата подписания: 26.02.2026</p>
+                          <p>ФИО: ЖАПАРОВ НУРЖАН КЕНЖИБАЕВИЧ</p>
+                                </div>
     <div hidden class="card" onclick="location.href='holeday.html'">
     </div>
     
@@ -1019,6 +1025,7 @@
 
 </body>
 </html>
+
 
 
 
